# ftm-transcribe

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  NOTICE  README.md  pyproject.toml
ftm_transcribe/: settings.py  tasks.py
